--- a/config.ENV
+++ b/config.ENV
@@ -1,1 +1,6 @@
+MONGO_USERNAME=apostolissiabanis
+MONGO_PASSWORD=YudZ4zsghj8XMX8E
+MONGO_CLUSTER=smart-tourism-api.zp7uv
+MONGO_DB_NAME=smart_tourism
+MONGO_APP_NAME=Smart-Tourism-Api
 PORT=8080
